// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`displays a placeholder image if there is none 1`] = `
<div
  className="activity-card absolute"
>
  <img
    className="activity-card-img"
    src="http://www.independentmediators.co.uk/wp-content/uploads/2016/02/placeholder-image-768x576.jpg"
  />
  <div
    className="activity-card-hover relative"
  >
    <div
      className="activity-card-description"
    >
      <p
        className="activity-card-text"
      >
        Sun tanning or simply tanning is the process whereby skin color is darkened or tanned. It is most often a result of exposure to ultraviolet (UV) radia...
      </p>
    </div>
    <div
      className="activity-card-title"
    >
      <h2>
        Fishing
      </h2>
    </div>
  </div>
</div>
`;

exports[`renders correctly 1`] = `
<div
  className="activity-card absolute"
>
  <img
    className="activity-card-img"
    src="http://ichef.bbci.co.uk/wwfeatures/wm/live/1280_640/images/live/p0/51/v6/p051v6vn.jpg"
  />
  <div
    className="activity-card-hover relative"
  >
    <div
      className="activity-card-description"
    >
      <p
        className="activity-card-text"
      >
        Sun tanning or simply tanning is the process whereby skin color is darkened or tanned. It is most often a result of exposure to ultraviolet (UV) radia...
      </p>
    </div>
    <div
      className="activity-card-title"
    >
      <h2>
        Fishing
      </h2>
    </div>
  </div>
</div>
`;
